# CppNotebook

./: .gitmodules  README.md
Code/: CMakeLists.txt  README.md
Code/CppCmakeExample/: .gitignore  .gitmodules  CMakeLists.txt  README.md
Code/CppCmakeExample/app/: CMakeLists.txt  main.cpp
Code/CppCmakeExample/cmake/: AddGitSubmodule.cmake  CPM.cmake  ConfigSafeGuards.cmake  Docs.cmake  LTO.cmake  Sanitizer.cmake  Tools.cmake  Warnings.cmake
Code/CppCmakeExample/configured/: config.hpp.in
Code/CppCmakeExample/src/: CMakeLists.txt  example_class.cpp  example_class.h  example_class.hpp
Code/CppCmakeExample/tests/: CMakeLists.txt  main.cpp  test_example.cpp
Notebook/: README.md
Notebook/CppNotes/: Part1.md  Part1_de.md  Part3.md  Part4.md  Part5.md  README.md
Notebook/EmbeddedSW/: 0x10QA.md  KeyQAs.md  Notebook1.md  QA1.md  QA2.md  README.md
Notebook/TheChernoNotes/: Part1.md  Part1_de.md  Part2.md  Part3.md  Part4.md  README.md
